--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
 </head>
 <body>
-
+	<!-- Main Template -->
 	<div class="site">
 		<div class="logo">
 			<img src="./images/site/logo.png" alt="hansel and petal" width="207" height="124">
@@ -26,9 +26,10 @@
 				</ul>
 			</script>
 		</div>
-
+		<!-- Paste Information Section Event when Click on a Model -->
 		<div id="copy"></div>
 
+		<!-- European Flowers -->
 		<div id="more-flowers">
 			<!-- Backbone Template -->
 			<script id="extra-flowers" type="text/template">
@@ -46,16 +47,16 @@
 
 
 
-	<script src="./bower_components/jquery/dist/jquery.min.js"></script>			<!-- jquery -->
-	<script src="./bower_components/underscore/underscore.js"></script>				<!-- underscore -->
-	<script src="./bower_components/backbone/backbone-min.js"></script>				<!-- backbone-->
+	<script src="./bower_components/jquery/dist/jquery.min.js"></script>		<!-- jquery -->
+	<script src="./bower_components/underscore/underscore.js"></script>		<!-- underscore -->
+	<script src="./bower_components/backbone/backbone-min.js"></script>		<!-- backbone-->
 	<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>	<!-- bootstrap -->
 
-	<script src="./js/models/singleFlowerModel.js"></script>			<!-- Single Model -->
+	<script src="./js/models/singleFlowerModel.js"></script>	<!-- Single Model -->
 	<script src="./js/views/singleFlowerView.js"></script>		<!-- Single View -->
 	<script src="./js/views/allFlowersView.js"></script>		<!-- All Flowers View -->
 	<script src="./js/collections/allFlowers.js"></script>		<!-- Collection Model -->
-	<script src="./js/routes/router.js"></script>				<!-- Router -->
-	<script src="./js/flowerApp.js"></script>					<!-- Execution -->
+	<script src="./js/routes/router.js"></script>			<!-- Router -->
+	<script src="./js/flowerApp.js"></script>			<!-- Execution -->
 </body>
 </html>
